--- a/src/content/posts/26/26.md
+++ b/src/content/posts/26/26.md
@@ -5,7 +5,7 @@ updated: 2025-07-14
 description: SUID是Linux的一个特殊权限，但是不能在脚本中使用
 tags: [Linux]
 category: 技术
-draft: true
+draft: false
 ---
 
 ## 1. uid与SUID
