--- a/src/content/posts/29/29.md
+++ b/src/content/posts/29/29.md
@@ -51,7 +51,7 @@ menuentry 'Arch Linux, with Linux linux' --class arch --class gnu-linux --class 
 
 除了启动内核用的`linux`指令外，还有一个`initrd`指令值得注意
 
-为了解决上述问题，我们引入了一个`initrd(Initial RAM Disk)`，由`bootloader`（也可以是`kernel`）在启动前加载入内存中，里面包含了一个完整的`ext2`文件系统，内含基础的运行环境（通常是`busybox`或`systemd`），`kernel`将其临时挂载为`rootfs`，查找并启动初始化程序`\linuxrc`，这就是`PID=1`的**第一个用户态进程**，操作系统从此进入用户态
+为了解决上述问题，我们引入了一个`initrd(Initial RAM Disk)`，由`bootloader`（也可以是`kernel`）在启动前加载入内存中，里面包含了一个完整的`ext2`文件系统，内含基础的运行环境（通常是`busybox`或`systemd`），`kernel`将其临时挂载为`rootfs`，查找并启动初始化程序`/linuxrc`，这就是`PID=1`的**第一个用户态进程**，操作系统从此进入用户态
 
 当然，启动一个完整的文件系统还是会增加`kernel`的复杂度，于是`linux 2.6`引入了`initramfs(Initial RAM File System)`，其实体是一个`cpio`格式的压缩包，而不是一个完整的文件系统，在启动时`kernel`会将其放到一个与`/run`等一样的`ramfs(tmpfs)`中，并将其挂载为`rootfs`，然后启动`/init`或`/sbin/init`进入用户态
 
